# TiredEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  overlord_settings.json  test
cmake/: AssetsCopy.cmake  Brotli.cmake  CompileShaders.cmake  CopyDLLs.cmake  SDL3.cmake  (+17 more)
engine/: CMakeLists.txt
engine/assets/shaders/: NormalShader.frag  NormalShader.vert  TextShader.frag  TextShader.vert  UIShader.vert
engine/assets/templates/: spritesheet.meta.yaml
engine/include/engine/component/: CameraComponent.h  CollisionComponent.h  ComponentManager.h  IComponent.h  IDisplayComponent.h  InputComponent.h  MeshComponent.h  MovementComponent.h  SpriteComponent.h  TextComponent.h  TextUIComponent.h  TransformComponent.h
engine/include/engine/core/: 3DCamera.h  Camera.h  Camera3D.h  CameraUI.h  DataTypes.h  DirtyTypeEnum.h  EngineLoop.h  GameObject.h  GameObjectBuilder.h  Inputs.h  Mesh.h  MeshFactory.h  MeshManager.h  MeshTypes.h  Sprite.h  SpriteSheet.h  UICamera.h  WindowData.h
engine/include/engine/debug/: BufferWidget.h  CameraWidget.h  EntityWidget.h  IOverlord.h  IOverlordItem.h  InputStateWatcher.h  LevelSceneLoaderWidget.h  MeshComponentWidget.h  Overlord.h  OverlordManager.h  OverlordSettingsWidget.h  SceneHierarchy.h  SceneLoaderOverlord.h  TextComponentWidget.h  TextUIComponentWidget.h  TexturesWidget.h  TransformComponentWidget.h
engine/include/engine/font/: Font.h  FontHandler.h  FontTypes.h  Police.h
engine/include/engine/input/: InputCallback.h  InputHandler.h  InputWatcher.h
engine/include/engine/material/: AbstractMaterial.h  Material.h  MaterialFactory.h  MaterialManager.h  MaterialTypes.h
engine/include/engine/renderer/: BufferHandle.h  BufferHandler.h  Constants.h  DataTypes.h  DescriptorLayoutStorage.h  DescriptorStorage.h  IRenderer.h  IRenderingData.h  IndexesBufferHandleWrapper.h  MaterialStructures.h  MemoryAllocator.h  MeshRenderer.h  PipelineFactory.h  PipelineTypes.h  Police.h  Renderables.h  RendererManager.h  RendererUtils.h  SamplerCache.h  Shader.h  ShaderFactory.h  SpriteManager.h  TextRenderer.h  TextureManager.h  Vertex.h  VertexBufferHandleWrapper.h  VulkanQueue.h  VulkanRenderer.h  Window.h
engine/include/engine/scene/: AbstractScene.h  AbstractSceneHandler.h  ISceneHandler.h  SceneHandler.h  SceneLoader.h
engine/include/engine/system/: DisplayParameter.h  System.h
engine/include/engine/utils/: Anchors.h  Asserts.h  BufferMemoryBlocks.h  BufferTypes.h  FileHandler.h  GuardedContainer.h  Hashing.h  Logger.h  Math.h  OverlordSettings.h  SpriteSheetLoader.h  StringUtils.h  ThreadPool.h  Token.h  Vertex.h  VulkanUtils.h
engine/include/engine/vulkan/: BufferHandle.h  BufferHandleWrapper.h  BufferHandler.h  Constants.h  DescriptorStorage.h  IBufferHandleWrapper.h  IVulkanContext.h  IndexesBufferHandleWrapper.h  PipelineFactory.h  ShaderFactory.h  VertexBufferHandleWrapper.h  VulkanContext.h  VulkanInitializer.h  VulkanRendering.h
engine/src/engine/component/: CameraComponent.cpp  CollisionComponent.cpp  ComponentManager.cpp  InputComponent.cpp  MeshComponent.cpp  MovementComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TextUIComponent.cpp  TransformComponent.cpp
engine/src/engine/core/: 3DCamera.cpp  Camera.cpp  Camera3D.cpp  CameraUI.cpp  EngineLoop.cpp  GameObject.cpp  GameObjectBuilder.cpp  Inputs.cpp  Mesh.cpp  MeshFactory.cpp  MeshManager.cpp  SpriteSheet.cpp  UICamera.cpp  WindowData.cpp
engine/src/engine/debug/: BufferWidget.cpp  CameraWidget.cpp  EntityWidget.cpp  InputStateWatcher.cpp  LevelSceneLoaderWidget.cpp  MeshComponentWidget.cpp  Overlord.cpp  OverlordManager.cpp  OverlordSettingsWidget.cpp  SceneHierarchy.cpp  SceneLoaderOverlord.cpp  TextComponentWidget.cpp  TextUIComponentWidget.cpp  TexturesWidget.cpp  TransformComponentWidget.cpp
engine/src/engine/font/: FontHandler.cpp  Police.cpp
engine/src/engine/input/: InputHandler.cpp  InputWatcher.cpp
engine/src/engine/material/: AbstractMaterial.cpp  MaterialFactory.cpp  MaterialManager.cpp
engine/src/engine/renderer/: BufferHandle.cpp  BufferHandler.cpp  DescriptorLayoutStorage.cpp  DescriptorStorage.cpp  IndexesBufferHandleWrapper.cpp  MemoryAllocator.cpp  MeshRenderer.cpp  PipelineFactory.cpp  Police.cpp  RendererManager.cpp  RendererUtils.cpp  SamplerCache.cpp  Shader.cpp  ShaderFactory.cpp  SpriteManager.cpp  TextRenderer.cpp  TextureManager.cpp  VertexBufferHandleWrapper.cpp  VulkanQueue.cpp  VulkanRenderer.cpp  Window.cpp
engine/src/engine/scene/: AbstractScene.cpp  AbstractSceneHandler.cpp  SceneHandler.cpp  SceneLoader.cpp
engine/src/engine/system/: System.cpp
engine/src/engine/utils/: BufferMemoryBlocks.cpp  FileHandler.cpp  Hashing.cpp  Logger.cpp  Math.cpp  OverlordSettings.cpp  SpriteSheetLoader.cpp  StringUtils.cpp  ThreadPool.cpp  Token.cpp  VulkanUtils.cpp
engine/src/engine/vulkan/: BufferHandle.cpp  BufferHandler.cpp  DescriptorStorage.cpp  IndexesBufferHandleWrapper.cpp  PipelineFactory.cpp  ShaderFactory.cpp  VertexBufferHandleWrapper.cpp  VulkanContext.cpp  VulkanInitializer.cpp  VulkanRendering.cpp
engine/tests/: CMakeLists.txt
engine/tests/utils/: FileHandlerTests.cpp  GuardedContainerTests.cpp
game/: CMakeLists.txt
game/assets/: system_config.json
game/assets/common/textures/: bricks.yaml
game/assets/fonts/: licences.txt
game/assets/levels/: level1.yaml
game/assets/scenes/: level1.yaml
game/assets/shaders/: CMakeLists.txt  RawTriangle.frag
game/assets/textures/: bricks.json  bricks.yaml
game/include/core/: Brick.h  BrickType.h  GameLoop.h  Grid.h
game/include/debug/: OverlordToolHandler.h  SceneLoaderOverlord.h
game/include/scene/: DebugScene.h  GameSceneLoader.h  GameplayScene.h  ISceneLoader.h  SceneEnum.h  SceneHandler.h
game/src/core/: Brick.cpp  GameLoop.cpp  Grid.cpp
game/src/debug/: OverlordToolHandler.cpp  SceneLoaderOverlord.cpp
game/src/scene/: DebugScene.cpp  GameSceneLoader.cpp  GameplayScene.cpp  SceneHandler.cpp
shaders/: CMakeLists.txt  RawTriangle.vert
tests/: CMakeLists.txt  test_dummy.cpp  test_guarded_container.cpp
tests/utils/: GuardedContainerTests.cpp
(+50 files in other folders)
